<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Membresia_diaria"
    android:background="#FFFDE7">

    <ImageView
        android:id="@+id/imageViewelipse"
        android:layout_width="244dp"
        android:layout_height="235dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/elipse"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ellipse" />


    <Button
        android:id="@+id/btnComprarDiario"
        android:layout_width="103dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_rounder"
        android:text="@string/compraDiarioa"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="429dp"
        android:layout_height="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_barra_nav"
        android:contentDescription="@string/barra_superior" />

    <ImageView
        android:id="@+id/imageViewBase"
        android:layout_width="429dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_barra_nav"
        android:contentDescription="@string/barra_inferior" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/caledario"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewelipse"
        app:layout_constraintEnd_toEndOf="@+id/imageViewelipse"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_calendar" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMembresiaDiaria"
        app:srcCompat="@drawable/ic_m_diario"
        android:contentDescription="@string/img_diario" />

    <ImageView
        android:id="@+id/imageViewTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_tarjeta_credito"
        android:contentDescription="@string/img_tarjeta" />

    <TextView
        android:id="@+id/textViewMembresiaDiaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif"
        android:text="@string/pase_diario"
        android:textColor="#0A0A0A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/_2_00"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textViewDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accesos"
        android:textColor="#0A0A0A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bailoterapia"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetalle" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="216dp"
        android:fontFamily="sans-serif"
        android:text="@string/membresia"
        android:textColor="#0A0A0A"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHomeMembresia"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnHomeMembresia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_home_icon"
        android:contentDescription="@string/home_icono" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_quinas"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/btnDerechaDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/boton_derecha"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_flecha_derecha" />

</androidx.constraintlayout.widget.ConstraintLayout>