<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistraseActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="554dp"
        android:layout_height="884dp"
        android:contentDescription="@string/FondoTransparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gym_image" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="548dp"
        android:layout_height="998dp"
        android:contentDescription="@string/gymfondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/ic_fondo" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/restablecer_contrasenia"
        android:textColor="#0A0A0A"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="53dp"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/imgcorreo"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/correo" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:text="@string/enviar_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>